2006-11-06
	* bug correction - output of get_pres_rules initialized - reported by Bogdan

2006-09-01
	* corrected memory leaks in route serialization
	* str_dup separated to macro and implementation function -> better for
	debugging and memory leak search

2006-08-08
	* added functions for rr_t serialization/deserialization

2006-06-29
	* added function has_to_tag common for more presence modules

2006-06-28
	* optimalization of dstring operations (internal buffers allocated in PKG
	memory, some functions changed to macros, added function dstr_get_str_pkg)
	* some str functions changed to macros

2006-06-23
	* added function requires_extension

2006-06-22
	* added function supports_extension

2006-06-21
	* corrected bug in get_expiration_value (result was always -1/1)
	* is_terminating_notify changed to use Subscription-State parser

2006-06-13
	* added few common SIP/SER functions into sip_utils.h
	* added functions for traversing hash table

2006-05-11
	* added changelog
	* added "simple profiling" capability (need to call PROF_START and
	PROF_STOP macros in profiled routine)